# rtcom-accounts-plugin-slack

./: SETTINGS-todo.txt
data/: Makefile.am  slack-advanced.glade
debian/: changelog  control  install
src/: Makefile.am  slack-plugin.c
